--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -16,6 +16,7 @@ mistral-common = "^1.4.4"
 mistralai = "^1.1.0"
 transformer-lens = "^2.7.0"
 mistral-sae = "^0.1.0"
+zstandard = "^0.23.0"
 
 [build-system]
 requires = ["poetry-core"]
