refactor: remove api list to change server backend

--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -17,6 +17,11 @@ mistralai = "^1.1.0"
 transformer-lens = "^2.7.0"
 mistral-sae = "^0.1.0"
 zstandard = "^0.23.0"
+fastapi = {extras = ["all"], version = "^0.115.0"}
+uvicorn = "^0.31.0"
+redis = "^5.1.1"
+aioredis = "^2.0.1"
+pydantic = "^2.9.2"
 
 [build-system]
 requires = ["poetry-core"]
